# ocaml-docs-mcp

./: .gitignore  .ocamlformat  .ocamlformat-ignore  Makefile  README.md  dune-project  ocaml_mcp.opam
lib/: client.ml  dune  sdk.ml  server.ml  types.ml
test/: dune
